--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,28 @@
   text-align: center;
 }
 
+/* .sign-in-body {
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: #0f0f0f;
+  background: linear-gradient(to bottom, #87CEFA, #ffffff);
+} */
+
 .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
 }
+
+* {
+	font-family: 'Poppins', sans-serif !important;
+	box-sizing: border-box;
+}
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
