--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,9 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
 }
-
-/* .sign-in-body {
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  background-color: #0f0f0f;
-  background: linear-gradient(to bottom, #87CEFA, #ffffff);
-} */
 
 .logo {
   height: 6em;
