--- a/src/styles/loginpage.css
+++ b/src/styles/loginpage.css
@@ -3,15 +3,16 @@ a {
     text-decoration: none;
 }
 
-/* html, body {
+.sign-in-background {
+    height: 100vh;
+    width: 100vw;
+    background: linear-gradient(to bottom, #87CEFA, #ffffff);
+    display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
     margin: 0;
     padding: 0;
-    background-color: #0f0f0f;
-    background: linear-gradient(to bottom, #87CEFA, #ffffff);
-} */
+}
 
 .form-modal__container {
     margin: 0 0.5rem;
