--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -1,10 +1,8 @@
-*{
+.homepage{
     padding:0;
     margin:0;
     box-sizing:border;
-    font-family:'Poppins',sans-serif;
     text-decoration: none;
-    list-style: none;
     scroll-behavior: smooth;
 }
 
@@ -30,7 +28,7 @@
     z-index: 0;
 }
 
-.content {
+.content-home {
     position: absolute;
     top: 0;
     left: 0;
@@ -43,15 +41,27 @@
     justify-content: space-between;
 }
 
+.content-other {
+    position: absolute;
+    top: 0;
+    left: 0;
+    /* width: 100%;
+    height: 100%; */
+    z-index: 1;
+    display: flex; 
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 nav{
     width: 100%;
     height: 8%;
     position: fixed;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(0 0 0 / 40%);
     box-shadow: 5px 5px 30px rgba(0, 0, 0, 15%);
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
 }
 
 nav .logo{
@@ -299,6 +309,10 @@ nav ul li a{
 
 .footlinks ul li{
     margin-bottom: 15px;
+}
+
+.footlinks ul{
+    list-style: none;
 }
 
 .footlinks ul li a{
