Budget Model for creating budget

--- a/client/src/styles/homepage.css
+++ b/client/src/styles/homepage.css
@@ -7,6 +7,10 @@
     background-color: black;
 }
 
+.travelopedia{
+    font-family: "Dancing Script", cursive !important;
+}
+
 /* Home page */
 
 .about{
